# mlflow-examples

./: .gitignore  DATASET_TRACKING.md  Dockerfile  README.md  dataset-tracking-example.py  docker-compose.yml  main.py  mlflow-dataset-tracking.py  mlflow-only.py  mlflow-with-dvc.py  pyproject.toml  requirements.txt  simple_pipeline.json  tracking_quickstart.ipynb
mlruns/: mlflow.db
vertex-ai/: model_management.py  pipeline.py  readme.md  setup.py  task.py
vertex-ai/trainer.egg-info/: PKG-INFO  SOURCES.txt
vertex-ai/trainer/data/: mpg_data_train_mpg.csv
